# DailyProjects

./: README
Antlr/C#/: Expr.sln
Antlr/C++/: Expr.g  input.txt  main.cpp  make.bat  makefile  makefile_var  pch.h
Antlr/Java/: Expr.g  Main.java  TreeExpr.g  main  make.bat  makefile
Antlr/Python/: Expr.g  TreeExpr.g  main.py  makefile
C#/ADTAndAlgorithms/: Sort.cs  Sort2.cs
C#/CommandLine/: CommandLine.cs
C#/InlineCache/: Program.cs  benchmarkReport.txt
C#/InlineDelegate/: Program.cs  Program2.cs
C#/IsolatedObject/: Program.cs
C#/Monad/: Program.cs  Program2.cs
C#/MonteCarloPi/: Main.cs  report.txt
C#/NamedFormat/: NamedFormat.cs
C#/PDFTools/: pdfcat.cs
C#/ParserCombinator/: Test.cs
C#/PersistentDictionary/: Main.cs
C#/PersistentDictionary2/: PersistentDictionary.cs  Program.cs
C#/PriorityQueue/: PriorityQueue.cs  PriorityQueueTest.cs
C#/ReferenceFinder/: ReferenceFinder.cs
C#/TestOpenCL.Net/: Program.cs  julia.cl
C#/TestUtil/: Util.cs
C#/TextFile/: TextFile.cs
C#/TimelineRenderer/: Program.cs
C#/三角形光栅化/: CSharp08UI.csproj  CSharp08UI.sln  Form1.Designer.cs  Form1.cs  Triangle.cs
C#/同城游服装查看/: WindowsFormsApplication1.sln
C#/图片隐藏字符串/: Program.cs
C#/垃圾文件清理/: CSharp08.sln
C#/局域网数据传输/: LANFileTransfer.sln
C#/文本编辑器/: CSharp08Form.csproj  CSharp08Form.sln  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Form3.Designer.cs  Form3.cs  Form4.Designer.cs  Form4.cs  Program.cs
C#/波纹/: CSharp08UI.csproj  CSharp08UI.sln  Form1.Designer.cs  Form1.cs  Program.cs
C#/邮件发送/: Program.cs
C++/2010DemoTools/: Algorithms.h  Any.h  CompileEnvironment.h  DataStructure.h  Delegate.cpp  Delegate.h  EnumStringize.h  Exception.h  Factory.h  FileUtility.cpp  FileUtility.h  LogSystem.cpp  LogSystem.h  MarkedDelegateQueue.cpp  MarkedDelegateQueue.h  Math.cpp  Math.h  MemoryAllocation.cpp  MemoryAllocation.h  MemoryCheck.cpp  MemoryCheck.h  Message.h  MetaProgram.h  PlatformDepends.cpp  PlatformDepends.h  Preprocessor.h  Profile.cpp  Profile.h  PropertySet.h  ScanUtil.cpp  ScanUtil.h  Serialize.h  SerializeComposite.h  SerializeContainer.h  SerializeExtend_AttriXml.cpp  SerializeExtend_AttriXml.h  SerializeFile.cpp  SerializeFile.h  SerializeNameValuePair.h  SerializeSerializeable.h  (+9 more)
C++/AlgoAndADT/: Timer.h  Utils.h  arithmeticSimulation.h  bigInteger.h  binarySearch.h  bst.h  hash.h  list.h  main.cpp  makefile  makefile_var  memPoolTest.h  multiStringMatch.h  pch.h  randSeq.h  report.txt  rotate.h  singleStringMatch.h  skipList.h  sort.h  sortReport.txt
C++/AutoReleasePool/: main.cpp  makefile
C++/BigInteger/: .clang_complete  Helper.h  benchmark.py  benchmark.txt  bigInteger.h  bigInteger2.h  bigInteger_CryptoPP.h  main.cpp
C++/BigInteger2/: .gitignore  BigInteger.cpp  BigInteger.h  BigInteger2.sln  Cpp2015.cpp  FFT.cpp  FFT.h  FFTGen.fs  FFTPerformanceReport.py  FastestFT.cpp  FastestFT.h  MultiplePrecisionOp.cpp  MultiplePrecisionOp.h  NTT.cpp  NTT.h  NTT2.cpp  NTT2.h  Utility.cpp  Utility.h  makefile  stdafx.h
C++/BinarySearchTree/: test0.cpp  test1.cpp
C++/BitonicSort/: CUDAUtils.cu  CUDAUtils.h  main.cu
C++/BloomFilter/: main.cpp  pch.h  report.txt
C++/BuddyAllocator/: buddy.c  makefile  test.c
C++/BufferedFile/: main.cpp
C++/BuiltinSort/: main.cpp
C++/ByzantineC/: CMakeLists.txt  README.md
C++/ByzantineC/App/: CMakeLists.txt
C++/ByzantineC/App/UnitTests/: CMakeLists.txt  TestArray.c  UnitTest.c  UnitTest.h  main.c
C++/ByzantineC/Byzantine/: Allocator.h  AllocatorDefault.c  AllocatorDefault.h  Assert.c  Assert.h  CMakeLists.txt  Config.h.in  Internal_OS.h  Internal_OS_Linux.c  List.c  List.h  Log.c  Log.h  Mem.c  Mem.h  Type.h  Utility.h
C++/C99ADT/: BST.c  BST.h  hashTable.c  hashTable.h  linkedList.c  linkedList.h  list.c  list.h  main.c  makefile  makefile_var  pch.h  test_BST.c  test_hashTable.c  test_linkedList.c  test_list.c  utils.h
C++/COSGame/: COSGame.sln
C++/CPUSoftwareRenderer/: .gitignore  CMakeLists.txt  README.md
C++/CPUSoftwareRenderer/data/: config.txt
C++/CPUSoftwareRenderer/src/: BoundingBox.h  Color.h  Geometry.h  MainLoop.h  Math.h  Matrix.h  Model.h  Platform.h  Rasterizer.h  Renderer.h  Texture.h  Util.h  Utils.h  Vector.h  main.cpp
C++/Channel/: main.cpp
C++/CharCounting/: Cpp2015.cpp
C++/CmdRunAndRetrieve/: main.cpp  makefile_var
C++/Codec/: .gitignore  CMakeLists.txt
C++/CompactionWithHandle/: main.cpp
C++/CompressionAlgo/: .exrc  benchmark.sh  benchmark_help.py  bitStream.h  compressor.cpp  compressor.h  huffman.cpp  huffman.h  lz77.cpp  lz77.h  lzw.cpp  lzw.h  main.cpp  makefile_var  report.txt  rle.cpp  rle.h  stackAllocator.h  stream.cpp  stream.h  test_huffman.cpp  test_lz77.cpp  test_lzw.cpp  test_rle.cpp  utils.cpp  utils.h
C++/ConvexHull2D/: test.cpp
C++/ConvexHull3D/: test.cpp
C++/Cpp11Range/: main.cpp
C++/CryptoAlgo/: base64.cpp  base64.h  main.cpp  pch.h  test_base64.cpp
C++/Currying/: main.cpp  makefile_var  pch.h
C++/DX9Test/: test.cpp
C++/DynamicCastPerformance/: main.cpp
C++/DynamicProgramming/: main.cpp  shortestPalindrome.h
C++/HashLib/: md5.h  (+15 more)
MachineLearning/: .gitignore
(+2480 files in other folders)
